[package]
name = "bitflags-iam"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bit flags for permissions
bitflags = "2.4"

uuid = { version = "1.0", features = ["v4", "serde"] }

# gRPC and async runtime
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Password hashing
bcrypt = "0.16"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

